Designing The temperate and displying it

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,9 @@
 
 <body>
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">TodoApp</a>
+   <div class="container-fluid">
+    <a class="navbar-brand" href="#"><strong><h4>Todo App</h4></strong></a>
+  </div>
 </nav>
   <div class="container">
     {% block content %}
