--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,8 +4,8 @@
  <div class="row mt-4">
      <div class="col">
          <h2>Add Item</h2>
-         <form action="" class="form-inline">
-         <input type="text" class= "form-control mb-2 mr-sm-2" placeholder="Type Here...">
+         <form action="add-todo/" method ="post" class="form-inline">
+         <input type="text" name="content" class= "form-control mb-2 mr-sm-2" placeholder="Type Here...">
          <button type="submit" class="btn btn-primary mb-2">Submit</button>
         </form>
      </div>
