--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -14,11 +14,9 @@
  <div class="row mt-4">
      <div class="col">
         <ul class="list-group">
-            <li class="list-group-item">An active item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
+           {% for taskItem in taskItems %}
+           <li class="list-group-item">{{ taskItem.text }}</li>
+           {% endfor %}
         </ul>
      </div>
  </div>
