--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -15,7 +15,14 @@
      <div class="col">
         <ul class="list-group">
            {% for taskItem in taskItems %}
-           <li class="list-group-item">{{ taskItem.text }}</li>
+            <li class="list-group-item">
+                    {{ taskItem.text }}  
+                    <div class="float-right">
+                        <form action="delete-todo/{{taskItem.id}}/" method="post" class="form-inline">
+                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                    </div>  
+            </li>    
            {% endfor %}
         </ul>
      </div>
