--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Django Todo App</title>
     <!-- Bootstrap -->
+
+  <link rel="icon" href="https://freeiconshop.com/wp-content/uploads/edd/task-done-flat.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
      rel="stylesheet"integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
      crossorigin="anonymous">
